Component overlap fixed with z-index

--- a/frontend-web/next/src/Components/TopSideBars/topsidebars.css
+++ b/frontend-web/next/src/Components/TopSideBars/topsidebars.css
@@ -7,6 +7,7 @@
 .topbar{
     width: 100vw;
     height: 10%;
+    z-index: 2;
     display: flex;
     position: fixed;
     background-color: white;
@@ -39,6 +40,7 @@
     width: 10%;
     height: 100vh;
     top: 0;
+    z-index: 2;
     padding-left: 10px;
     position: fixed;
     display: flex;
